// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`array 1 context true hello 1`] = `
{
  "arg": "hello",
  "myFixture": 1234,
}
`;

exports[`array 1 context true hi 1`] = `
{
  "arg": "hi",
  "myFixture": 1234,
}
`;

exports[`array 2 context true hello 2 1`] = `
{
  "argNumber": 2,
  "argString": "hello",
  "myFixture": 1234,
}
`;

exports[`array 2 context true hi 3 1`] = `
{
  "argNumber": 3,
  "argString": "hi",
  "myFixture": 1234,
}
`;

exports[`array 3 context true hello 2 1`] = `
{
  "argNumber": 2,
  "argString": "hello",
  "myFixture": 1234,
}
`;

exports[`array 3 context true hi 3 1`] = `
{
  "argNumber": 3,
  "argString": "hi",
  "myFixture": 1234,
}
`;

exports[`array 4 context true hello 2 1`] = `
{
  "argNumber": 2,
  "argString": "hello",
}
`;

exports[`array 4 context true hi 3 1`] = `
{
  "argNumber": 3,
  "argString": "hi",
}
`;

exports[`docs example - add(1, 1) 1`] = `2`;

exports[`docs example - add(2, 3) 1`] = `5`;

exports[`single context true hello 1`] = `
{
  "arg": "hello",
  "myFixture": 1234,
}
`;

exports[`single context true hi 1`] = `
{
  "arg": "hi",
  "myFixture": 1234,
}
`;

exports[`template context true 'hello' 2 1`] = `
{
  "arg": {
    "a": "hello",
    "b": 2,
  },
  "myFixture": 1234,
}
`;

exports[`template context true 'hi' 3 1`] = `
{
  "arg": {
    "a": "hi",
    "b": 3,
  },
  "myFixture": 1234,
}
`;
